# csv-to-parquet

./: .gitignore  Makefile  README.md  pyproject.toml
src/csv_to_parquet/: __init__.py  __main__.py  convert.py
