[project]
name = "csv-to-parquet"
version = "0.1.0"
description = "One to many CSV to Parquet conversion utility"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.5.0",
    "click>=8.1.7",
]

[project.scripts]
csv-to-parquet = "csv_to_parquet.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.2",
    "pytest>=8.3.2",
]
